apps/argocd-managed/sample-api/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api
spec:
  selector:
    app: sample-api
  ports:
    - port: 80
      targetPort: 8000
