apps/argocd-managed/sample-api/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-api
spec:
  ingressClassName: traefik
  rules:
  - host: samapi.cnlab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-api
            port:
              number: 80
